--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
     <script src='js/app.js' type='module' defer></script> 
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
-    
+    <section id="container">
+        <div class= reloj>
+            <p id="reloj">00:00:00</p>
+        </div>
+        <div class="botones">
+            <button id="pause" class="boton">Pause</button>
+            <button id="start" class="boton">Start</button>
+            <button id="reset" class="boton">Reset</button>
+        </div>
+    </section>
 </body>
 </html>
